--- a/index.css
+++ b/index.css
@@ -11,6 +11,14 @@ span#name {
     font-family: cursive;
 }
 
+#abbr{
+    display: none;
+}
+
+.shrink #abbr{
+    display: inline-block;
+}
+
 div#userinfo {
     width: 100%;
     height: 95%;
@@ -103,7 +111,7 @@ div#userinfobox {
     width: 100px;
     height: 100px;
     /* display: inline-block; */
-    /* float: left; */
+    float: left;
     transition: 0.5s;
     /* position: absolute; */
 }
@@ -325,7 +333,7 @@ div#identifier {
     opacity: 1;
     cursor: pointer;
     background: #338487;
-    background: black;
+    background: #bb9388;
     transition: background 0.3s;
 }
 
